Checkmarks are shifted down on iPhone at build.webkit.org/dashboard https://bugs.webkit.org/show_bug.cgi?id=122909
Reviewed by Timothy Hatcher.

* BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Images/checkmark.svg: Added.
* BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Scripts/StatusLineView.js:
(StatusLineView.prototype.set repeatCount):
* BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Styles/StatusLineView.css:
(.status-line.good .bubble.pictogram):
Use an SVG image instead of an obscure font for the checkboxes so they
render identically on all platforms.


Canonical link: https://commits.webkit.org/142649@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159382 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Tools/BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Styles/StatusLineView.css
+++ b/Tools/BuildSlaveSupport/build.webkit.org-config/public_html/dashboard/Styles/StatusLineView.css
@@ -64,8 +64,7 @@
 }
 
 .status-line.good .bubble.pictogram {
-    font-family: "MonotypeGurmukhi", sans-serif;
-    line-height: 29px;
+    background-image: url(../Images/checkmark.svg);
 }
 
 .status-line.danger .bubble {
